<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_menu_home_default"
        android:enabled="true"
        android:title="@string/label_home" />

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_menu_search_default"
        android:enabled="true"
        android:title="@string/label_search" />

    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/ic_menu_favorite_default"
        android:enabled="true"
        android:title="@string/label_favorite" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_menu_profile_default"
        android:enabled="true"
        android:title="@string/label_profile" />
</menu>